...
        guard let presenter = presenter, Units.isConvertible(experimentUnitId) else { return }
        let dialog = UnitDialog(experimentUnitId: experimentUnitId, currentUnitId: currentUnitId, onChosen: onChosen)
        let alert = UIAlertController(title: localize("unit_dialog_title"), message: nil, preferredStyle: .actionSheet)
        dialog.tableView = FixedTableView(frame: .zero, style: .grouped)
        dialog.tableView.dataSource = dialog
        dialog.tableView.delegate = dialog
        dialog.tableView.accessibilityIdentifier = "unit.dialog"
        alert.setValue(dialog, forKey: "contentViewController")
        alert.addAction(UIAlertAction(title: localize("cancel"), style: .cancel, handler: nil))
        if let popover = alert.popoverPresentationController, let sourceView = sourceView {
            popover.sourceView = sourceView
            popover.sourceRect = sourceRect ?? sourceView.bounds
        }
...
