...
        
        if sensors.contains(.Proximity) {
            containers += "<container size=\"\(bufferSize)\">proxX</container>\n<container size=\"\(bufferSize)\">prox_time</container>\n"
            
            input += "<sensor type=\"proximity\" rate=\"\(rate)\">\n<output component=\"x\">proxX</output>\n<output component=\"t\">prox_time</output>\n</sensor>\n"
            
            views += "<view label=\"Proximity\">\n<graph label=\"Proximity\" labelX=\"t (s)\" labelY=\"Distance (cm)\" partialUpdate=\"true\">\n<input axis=\"x\">prox_time</input>\n<input axis=\"y\">proxX</input>\n</graph>\n</view>\n"
            
            export += "<set name=\"Proximity\">\n<data name=\"Time (s)\">prox_time</data>\n<data name=\"Distance (cm)\">proxX</data>\n</set>\n"
        }
        
        if sensors.contains(.GPS) {
            containers += "<container size=\"\(bufferSize)\">gpsLat</container>\n<container size=\"\(bufferSize)\">gpsLon</container>\n<container size=\"\(bufferSize)\">gpsZ</container>\n<container size=\"\(bufferSize)\">gpsV</container>\n<container size=\"\(bufferSize)\">gpsDir</container>\n<container size=\"\(bufferSize)\">gps_time</container>\n<container size=\"\(bufferSize)\">gpsAccuracy</cont
...
